--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     "require": {
         "php": ">=5.6.4",
         "laravel/framework": "5.4.*",
-        "laravel/passport": "^2.0"
+        "laravel/passport": "^3.0",
+        "weidner/goutte": "^1.1"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
