--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "laravel-elixir-vue-2": "^0.3.0",
     "laravel-elixir-webpack-official": "^1.0.2",
     "lodash": "^4.16.2",
-    "vue": "^2.0.1"
+    "vue": "^2.0.1",
+    "vue-template-compiler": "^2.5.21"
   },
   "dependencies": {
     "axios": "^0.15.3",
     "vue-progressbar": "^0.7.1",
-    "vue-router": "^2.8.1"
+    "vue-router": "^2.8.1",
+    "vue-server-renderer": "^2.5.21"
   }
 }
